Fixed clovers overlapping other elements on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,12 @@ h2 {
     max-width: 770px;
 }
 
-.clover {
-    display: inline-block;
-    position: relative;
-    top: -100px;
+@media (min-width: 768px) {
+    .clover {
+        display: inline-block;
+        position: relative;
+        top: -100px;
+    }
 }
 
 footer div {
